--- a/server/model-config.json
+++ b/server/model-config.json
@@ -34,5 +34,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "user": {
+    "dataSource": "db",
+    "public": false
   }
 }
