team model with PersistedModel Base class

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,5 +38,9 @@
   "user": {
     "dataSource": "db",
     "public": false
+  },
+  "team": {
+    "dataSource": "db",
+    "public": false
   }
 }
