--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "team": {
     "dataSource": "db",
     "public": false
+  },
+  "project": {
+    "dataSource": "db",
+    "public": true
   }
 }
